# vite_actix_boilerplate

./: .dockerignore  .env.example  .gitignore  QUICK_SECURITY_FIXES.md  README.md  SECURITY_AUDIT.md  SECURITY_HARDENING_TODO.md  SECURITY_VULNERABILITIES.md  VERIFICATION.md  backup.sql  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  hash.rs
backend/.sqlx/: query-00833d8def7332f5fa6a2979e4fc442dee804d52167d98fd7cbe6bb940af427d.json  query-01873a273da280aad248bfa10b230592a3938783f79b7b6d3e660c0d97d59cae.json  query-04df9d9f511dc98d3c481f3a80727d524303a5177ac4555c33ba1210089bbe8e.json  query-0833df8f2152f04285fde866ea4e4a8048cb65a62eb5efb8340e0a48d68474f6.json  query-0893db1703aa30917ddad87b78ddae61cba5adf24ffa578ca547ed9ebf7e0e86.json  query-08be91b3821babbe48c185e0fec1900a24ab749201668414201242b2ad372808.json  query-0b0d3f4772f34d317b14dc773e7e0a942ead7d071a76d7114d9412cff6912d3f.json  query-0cdb568279cd6a890908b2a732bff3b1776d157f5316da7a7fca3764f9f126f3.json  query-0eeeac1ec50c6d2239e08e1b732e0796dc5143ac4c8a06879c8dc1f3a67bc515.json  query-126183341943958f9726353004c276afb0d4b518ab232d896b50077698b84f1b.json  query-13bce022711da5af6ec80eb4bad45dc76697092e986db4df4d5b1bd91eaecbd7.json  query-15accd7f302762f4ddebec5a27a83116b02ad2756e67bd3162ab12d50de10ffa.json  query-1702c6613dcc6eebcbe75b589f7fbc4679add92d71b123bffee5f67568397213.json  query-173576cc5ac92b98af6bcda8d796786fcd8ba23152afbbbfc8abe1368c1fb604.json  query-1f025070bf34d67818457eeb91c5ffff6470e7f6a160a61297fd23343345a70d.json  (+74 more)
backend/src/: lib.rs  main.rs
(+152 files in other folders)
