[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }  # ADD chrono feature
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
env_logger = "0.11"
jsonwebtoken = "8"
bcrypt = "0.14"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"