[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }  # ADD chrono feature
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
env_logger = "0.11"
jsonwebtoken = "8"
bcrypt = "0.14"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
totp-rs = { version = "5.4", features = ["qr"] }
rand = "0.8"
base32 = "0.4"
ethers = "2.0.14"
lazy_static = "1.5.0"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"] }
sha2 = "0.10"
